# sms-backup-restore-parser

./: .gitignore  .mailmap  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  sms-backup-restore-parser.code-workspace  sms-backup-restore.schema.json
.github/: copilot-instructions.md
.github/workflows/: docs.yml  release.yml
.handoff/plans/: 20260317-001-Updates.md  20260317-001-Updates_TEMPLATE.txt  20260317-002-Updates.md  20260317-002-Updates_TEMPLATE.txt  20260317-003-Updates.md  20260317-003-Updates_TEMPLATE.txt
changelog/: index.html
docs/: changelog.md  index.md  installation.md  reports.md  schema.md  usage.md  xml-reference.md
installation/: index.html
reference/: knowledge-base.md
reports/: index.html
schema/: index.html
scripts/: build.py
search/: search_index.json
src/sms_backup_parser/: __init__.py  __main__.py  cli.py  models.py  parser.py  progress.py  reports.py  utils.py  validate.py
tests/: conftest.py  test_cli.py  test_lint.py  test_models.py  test_parser.py  test_reports.py  test_utils.py  test_validate.py  test_writers.py
tests/fixtures/: edge_cases.xml  malformed.xml  minimal_calls.xml  minimal_mms.xml  minimal_sms.xml  mixed.xml
usage/: index.html
xml-reference/: index.html
